--- a/exercice.html
+++ b/exercice.html
@@ -37,7 +37,7 @@
         
         <label>adresse</label>
 
-        <input  name="address" type="text" placeholder="yourlocation" required/>
+        <input  name="address" type="text" placeholder="yourlocation" minlength="10" required/>
        
         <input type="submit" value="Submit">Envoyer</input>
         <input type="reset" value="Reset">Annuler</input>
